--- a/views/coursedescpage.ejs
+++ b/views/coursedescpage.ejs
@@ -9,25 +9,30 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    
+<link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Shadows+Into+Light&family=Special+Elite&display=swap" rel="stylesheet">
+
+    
+    <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Lobster&family=Montserrat:ital,wght@1,100&family=Oswald:wght@300;400&family=Oxygen:wght@300;700&family=Prompt:wght@600&family=Quicksand:wght@300&family=Righteous&family=Secular+One&family=Tilt+Prism&display=swap" rel="stylesheet">
+
     <link rel = "stylesheet" href = "css/coursedescpage.css">
     <title>Course</title>
 </head>
 <body>
     <%- include('header'); -%>
 
-    <div>
+    <div class="content-bg">
         <div class="maintop">
                 <div class="container">
                     <div class="row px-5 mx-4">
                         <div class="col-lg-8 px-3">
                         <div class="course-title">
-                            <h1>Learn Guitar in 30 Days (abc abc........)
-                                    From Zero to Expert!
+                            <h1 style="font-family: 'Archivo Black', sans-serif; color:aqua">BEGINNER ACOUSTIC GUITAR LESSONS
                             </h1>
                         </div>
 
                         <div class="course-info">
-                          <p>Master Guitar and Musical Toolkit. Includes tunes, tons of custom hooks, and more! Course 100% Updated November 2022</p>
+                          <p>Begin your guitar journey with Marty Schwartz, our guitar tutor from Texas, America.</p>
                         </div>
 
                         <div class="d-flex mb-2">
@@ -45,25 +50,23 @@
                                     
                                 </div>
                         </div>
-                        <div class="author">Created By Music Teacher</div>
-
-                    
-                        
+                        <div class="author">Created By Marty Schwartz</div>
                     </div>
                 <div class="col-lg-4">
                     <div class="course-leftbar">
                         <div class="inner">
                             <div class="card d-none d-lg-block" style="width: 20rem; box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;">
-                                <img class="card-img-top" src="https://cdn.w600.comps.canstockphoto.com/men-playing-guitar-handsome-young-man-pictures_csp16301188.jpg" alt="Card image cap">
+                                <img class="card-img-top" src="images/getstarted.png" alt="Card image cap">
 
                               <a href="/coursepage">
                                 <div class = "play">
                                     <img src = "images/play-button.png" width="40px">
                                 </div></a>
                                 <div class="card-body">
-                                  <h5 class="card-title prc"><p>Price:</p> <p>$19.99</p></h5>
-                                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum consequatur recusandae velit iste cumque tempore natus fugit, placeat impedit ipsam?</p>
+                                  <h5 class="card-title prc" style="color: black;"><p style="color: black;">Price:</p> <p style="color: black;">Rs.1000</p></h5>
+                                  <p class="card-text" style="color: black; ">Begin your music journey with the easiest guitar lessons! Marty teaches you the most basic chords, and the coolest strumming patterns. BUY NOW!</p>
                                   <a href="/checkout" class="btn btn-dark">Buy This Course</a>
+                                  <a href="/wishlist" class="btn btn-dark">Add to Wishlist</a>
                                 </div>
                               </div>
                         </div>
@@ -79,74 +82,73 @@
             <div class="row g-5">
                 <div class="col-lg-8">
                     <div class="course_info">
-                        <div class="thumnail course-box">
-                            <img src="images/guitar1.jpg" alt="" class="w-100">
-                        </div>
-                        <div class="course-box mt-4
-                        ">
-                        <div class="course-content">
-                            <div class="title">
-                                <div class="title-style">
-                                    <h4 class = "style1">What You'll Learn</h3>
-                                </div>
+                        <div class="thumnail course-box container-img">
+                            <img src="images/marty-pic.jpg" alt="" class="w-100">
+                            <div class="bottom-right">
+                                <div style="color:black"><a href="#">See more about Marty</a></div>
+                            <div></div>
+                            
                             </div>
+                        </div>
 
-
-                                
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa doloremque perspiciatis numquam. Voluptatibus laborum esse ducimus numquam in quam, provident aliquam mollitia asperiores quaerat. Explicabo quas eius dolor eaque earum.
-                                </p>
-
-                            <div class="row g-5 mb-5">
+                        <div class="course-box">
+                            <div class="title-style">
+                                <div class = "style1">Course Content: </div>
+                               
+                            </div>
+                            <div class="row">
                                 <div class="col-lg-6">
                                     <div class="list1">
                                         <ul class="list1">
                                             <li class="mt-0">
-                                                <span class = "greentick">&#9989</span>
-                                                Become an advanced and confident Guitar Player within a month. 
+                                                <span class = "greentick mt-0"><img src="images/course-content-icon.png" alt="" width="20px"></span>
+                                                1)<a style="text-decoration: none; color:black;" href="#">Your very first acoustic guitar lesson</a>
+                                                <hr style="color:black;">
                                             </li>
-                                            <li>
-                                                <span class = "greentick">&#9989</span>
-                                                Become an advanced and confident Guitar Player within a month. 
-                                            </li>
-
-                                            <li>
-                                                <span class = "greentick">&#9989</span>
-                                                Become an advanced and confident Guitar Player within a month. 
-                                            </li>
-                            
-                                        </ul>
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-6">
-                                    <div class="list1">
-                                        <ul class="list1">
                                             <li class="mt-0">
-                                                <span class = "greentick">&#9989</span>
-                                                Become an advanced and confident Guitar Player within a month. 
-                                            </li>
-                                            <li>
-                                                <span class = "greentick">&#9989</span>
-                                                Become an advanced and confident Guitar Player within a month. 
+                                                <span class = "greentick mt-0"><img src="images/course-content-icon.png" alt="" width="20px"></span>
+                                                2)<a style="text-decoration: none; color:black;" href="#">The A major chord</a>
+                                                <hr/>
                                             </li>
 
-                                            <li>
-                                                <span class = "greentick">&#9989</span>
-                                                Become an advanced and confident Guitar Player within a month. 
+                                            <li class="mt-0">
+                                                <span class = "greentick mt-0"><img src="images/course-content-icon.png" alt="" width="20px"></span>
+                                                3)The G major chord
+                                                <hr/>
                                             </li>
                             
-                                        </ul>
+                                            <li class="mt-0">
+                                                <span class = "greentick mt-0"><img src="images/course-content-icon.png" alt="" width="20px"></span>
+                                                4)The D major chord
+                                                <hr/>
+                                            </li>
+                                            <li class="mt-0">
+                                                <span class = "greentick mt-0"><img src="images/course-content-icon.png" alt="" width="20px"></span>
+                                                5)The A minor and E major Chords
+                                                <hr/>
+                                            </li>
+                                            <li class="mt-0">
+                                                <span class = "greentick mt-0"><img src="images/course-content-icon.png" alt="" width="20px"></span>
+                                                6)The C major chord
+                                                <hr/>
+                                            </li>
+                                            <li class="mt-0">
+                                                <span class = "greentick mt-0"><img src="images/course-content-icon.png" alt="" width="20px"></span>
+                                                7)The F major chord
+                                                <hr/>
+                                            </li>
+                                            <li class="mt-0">
+                                                <span class = "greentick mt-0"><img src="images/course-content-icon.png" alt="" width="20px"></span>
+                                                8)The D minor chord
+                                                <hr/>
+                                            </li>
                                     </div>
-                                </div>
-                            </div>
-
-                           
+                               </ul>
                         </div>
-                        <div class="show-more">
-                            Show More
+                     
                         </div>
-                        </div>
+                    </div>
+                        
 
                         <div class="course-box">
                             <div class="title-style">
@@ -159,15 +161,16 @@
                                         <ul class="list1">
                                             <li class="mt-0">
                                                 <span class = "greentick mt-0"><img src="images/tv.png" alt="" width="20px"></span>
-                                                24 Hours of Video Lectures
-                                            </li>
-                                            <li class="mt-0">
-                                                <span class = "greentick mt-0"><img src="images/cell-phone.png" alt="" width="20px"></span>
-                                                Available on Phone/Tablet
+                                                10 Hours of Video Lectures
                                             </li>
                                             <li class="mt-0">
                                                 <span class = "greentick mt-0"><img src="images/subtitles.png" alt="" width="20px"></span>
                                                 Closed Captions
+                                            </li>
+
+                                            <li class="mt-0">
+                                                <span class = "greentick mt-0"><img src="images/high-five.png" alt="" width="20px"></span>
+                                                Community Support
                                             </li>
                             
                                     </div>
@@ -176,10 +179,7 @@
                         <div class="col-lg-6">
                             <div class="list1">
                                 <ul class="list1">
-                                    <li class="mt-0">
-                                        <span class = "greentick mt-0"><img src="images/high-five.png" alt="" width="20px"></span>
-                                        Community Support
-                                    </li>
+                                    
                                     <li class="mt-0">
                                         <span class = "greentick mt-0"><img src="images/24-hours.png" alt="" width="20px"></span>
                                         Live Support 24/7
@@ -243,10 +243,7 @@
                                             <span class = "greentick mt-1"><img src="images/checkmark.png" alt=""></span>
                                             Learn Basics of Music Notes and pitches 
                                         </li>
-                                        <li>
-                                            <span class = "greentick mt-1"><img src="images/checkmark.png" alt=""></span>
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, rem. 
-                                        </li>
+                                      
 
                                         <li>
                                             <span class = "greentick mt-1"><img src="images/checkmark.png" alt=""></span>
@@ -267,7 +264,7 @@
                     </div>
                     
                     </div>
-                    <div class="course-box">
+                    <div class="course-box" style="margin-bottom: 10px;">
                         <div class="title">
                             <div class="title-style">
                                 <h4 class = "style1">Rating</h3>
@@ -293,7 +290,9 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-9"></div>
+
+                            <a href="/checkout" class="btn btn-dark">Buy This Course</a>
+                                  <a href="/wishlist" class="btn btn-dark">Add to Wishlist</a>
                         </div>
                     </div>
                 </div>
