--- a/views/spotlight.ejs
+++ b/views/spotlight.ejs
@@ -6,54 +6,121 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/spotlight.css">
+        <link rel="stylesheet" href="/css/spotlight.css">
+        <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Lobster&family=Montserrat:ital,wght@1,100&family=Oswald:wght@300;400&family=Oxygen:wght@300;700&family=Prompt:wght@600&family=Quicksand:wght@300&family=Righteous&family=Secular+One&family=Tilt+Prism&display=swap" rel="stylesheet">
+        
+<link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Shadows+Into+Light&family=Special+Elite&display=swap" rel="stylesheet">
     </head>
     <body style="background-color: black;">
         <%- include('header'); -%>
 
-        <div>
-            <ul>
-                <li class="list-item">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/BlO8vHshYRk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                </li>
-            <li class="list-item">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/jZjc-Avbig0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </li>
-            <li class="list-item">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/svaH5cQ6gZY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </li>
-            <li class="list-item">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/xEsnvNcJ7o8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <div class="video-part">
+            <div class="our-team">
+                <h1 class="our-team-header">STUDENT<div style="color: aqua;">SPOTLIGHT</div></h1>
+                <p class="our-team-content">For those students who have enrolled to our program,</p>
+                <p class="our-team-content">we have Carl Brown helping our students </p>
+                <p class="our-team-content">help them on their problems</p>
+                </div>
+            <div class = "video_box">
+                <img src="images/spotlight.jpg" style="width: 500px ; height: 320px ;">
+            
+            </div>
+        </div>
+  
 
-            </li>
-            <li class="list-item">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/DLQ6fbKISFo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-            </li>
-
-            <li class="list-item">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/-GxFtW4qe3g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </li>
-
-            <li class="list-item" >
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/vHSIR7k9tDc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </li>
-
-            <li class="list-item">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/QpToL3SOFTE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-            </li>
-
-            <li class="list-item">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/n9pSIOJvCi0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </li>
-
-            <li class="list-item">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/FR-nNkCDwn8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <div class="container">
+            <span class="line"></span>
+            <div class="item">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/BlO8vHshYRk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="info">
+                    <p class="about">Student Spotlight:  </p>
+                    <p class="about-info">Carl Brown helps our students and explains how to hold the barre chords properly.</p>
+                    <h4 class="instruct"> Instuctor Name:<span class="name">  CARL BROWN</i></span></h4>
+                </div>
                 
-            </li>
-
-            </ul>
+            </div>
+            <span class="line"></span>
+            <div class="item">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/jZjc-Avbig0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="info">
+                    <p class="about">Student Spotlight: </p>
+                    <p class="about-info">Carl Brown helps our students and explains how to hold the barre chords properly.</p>
+                    <h4 class="instruct"> Instuctor Name:<span class="name"> CARL BROWN</span></h4>
+                </div>
+            </div>
+            <span class="line"></span>
+            <div class="item">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/svaH5cQ6gZY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="info">
+                    <p class="about">Student Spotlight:  </p>
+                    <p class="about-info">The guitar is a fretted musical instrument that typically has six strings. It is usually held flat against the player's body and played by strumming or plucking the strings with the dominant hand, while simultaneously pressing selected strings against frets with the fingers of the opposite hand.</p>
+                    <h4 class="instruct">Instuctor Name:<span class="name">  CARL BROWN</span></h4>
+                </div>
+            </div>
+            <span class="line"></span>
+            <div class="item">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/xEsnvNcJ7o8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="info">
+                    <p class="about">Student Spotlight:  </p>
+                    <p class="about-info">The guitar is a fretted musical instrument that typically has six strings. It is usually held flat against the player's body and played by strumming or plucking the strings with the dominant hand, while simultaneously pressing selected strings against frets with the fingers of the opposite hand.</p>
+                    <h4 class="instruct">Instuctor Name:<span class="name">  CARL BROWN</span></h4>
+                </div>
+            </div>
+            <span class="line"></span>
+            <div class="item">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/DLQ6fbKISFo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="info">
+                    <p class="about">Student Spotlight:  </p>
+                    <p class="about-info">The guitar is a fretted musical instrument that typically has six strings. It is usually held flat against the player's body and played by strumming or plucking the strings with the dominant hand, while simultaneously pressing selected strings against frets with the fingers of the opposite hand.</p>
+                    <h4 class="instruct">Instuctor Name:<span class="name"> CARL BROWN</span></h4>
+                </div>
+            </div>
+            <span class="line"></span>
+            <div class="item">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/-GxFtW4qe3g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="info">
+                    <p class="about">Student Spotlight:  </p>
+                    <p class="about-info">The guitar is a fretted musical instrument that typically has six strings. It is usually held flat against the player's body and played by strumming or plucking the strings with the dominant hand, while simultaneously pressing selected strings against frets with the fingers of the opposite hand.</p>
+                    <h4 class="instruct"> Instuctor Name:<span class="name">  CARL BROWN</span></h4>
+                </div>
+            </div>    
+            <span class="line"></span>
+            <div class="item">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/vHSIR7k9tDc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="info">
+                    <p class="about">Student Spotlight: </p>
+                    <p class="about-info">The guitar is a fretted musical instrument that typically has six strings. It is usually held flat against the player's body and played by strumming or plucking the strings with the dominant hand, while simultaneously pressing selected strings against frets with the fingers of the opposite hand.</p>
+                    <h4 class="instruct"> Instuctor Name:<span class="name">  CARL BROWN</span></h4>
+                </div>
+            </div>
+            <span class="line"></span>
+            <div class="item">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/QpToL3SOFTE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="info">
+                    <p class="about">Student Spotlight:  </p>
+                    <p class="about-info">The guitar is a fretted musical instrument that typically has six strings. It is usually held flat against the player's body and played by strumming or plucking the strings with the dominant hand, while simultaneously pressing selected strings against frets with the fingers of the opposite hand.</p>
+                    <h4 class="instruct">Instuctor Name:<span class="name">  CARL BROWN</span></h4>
+                </div>
+            </div>
+            <span class="line"></span>
+            <div class="item">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/n9pSIOJvCi0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="info">
+                    <p class="about">Student Spotlight:  </p>
+                    <p class="about-info">The guitar is a fretted musical instrument that typically has six strings. It is usually held flat against the player's body and played by strumming or plucking the strings with the dominant hand, while simultaneously pressing selected strings against frets with the fingers of the opposite hand.</p>
+                    <h4 class="instruct"> Instuctor Name:<span class="name">  CARL BROWN</span></h4>
+                </div>
+            </div>
+            <span class="line"></span>
+            <div class="item">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/FR-nNkCDwn8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="info">
+                    <p class="about">Student Spotlight:  </p>
+                    <p class="about-info">The guitar is a fretted musical instrument that typically has six strings. It is usually held flat against the player's body and played by strumming or plucking the strings with the dominant hand, while simultaneously pressing selected strings against frets with the fingers of the opposite hand.</p>
+                    <h4 class="instruct">Instuctor Name:<span class="name">  CARL BROWN</span></h4>
+                </div>
+            </div>
+                
             
         </div>
 
